k8s/f.yml
apiVersion: v1
kind: Namespace
metadata:
  name: urbanops

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: urbanops
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: urbanops
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: urbanops
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: nithingowdahm87/hackathon-gateway-service:latest
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: urbanops
spec:
  selector:
    app: gateway-service
  ports:
    - port: 8081
      targetPort: 8081

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: urbanops
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: nithingowdahm87/hackathon-auth-service:latest
          ports:
            - containerPort: 8090
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: urbanops
spec:
  selector:
    app: auth-service
  ports:
    - port: 8090
      targetPort: 8090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
  namespace: urbanops
  labels:
    app: alert-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
        - name: alert-service
          image: nithingowdahm87/hackathon-alert-service:latest
          ports:
            - containerPort: 8091
---

apiVersion: v1
kind: Service
metadata:
  name: alert-service
  namespace: urbanops
spec:
  selector:
    app: alert-service
  ports:
    - port: 8091
      targetPort: 8091

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cctv-service
  namespace: urbanops
  labels:
    app: cctv-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cctv-service
  template:
    metadata:
      labels:
        app: cctv-service
    spec:
      containers:
        - name: cctv-service
          image: nithingowdahm87/hackathon-cctv-service:latest
          ports:
            - containerPort: 8094
---

apiVersion: v1
kind: Service
metadata:
  name: cctv-service
  namespace: urbanops
spec:
  selector:
    app: cctv-service
  ports:
    - port: 8094
      targetPort: 8094

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: power-service
  namespace: urbanops
  labels:
    app: power-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: power-service
  template:
    metadata:
      labels:
        app: power-service
    spec:
      containers:
        - name: power-service
          image: nithingowdahm87/hackathon-power-service:latest
          ports:
            - containerPort: 8093
---

apiVersion: v1
kind: Service
metadata:
  name: power-service
  namespace: urbanops
spec:
  selector:
    app: power-service
  ports:
    - port: 8093
      targetPort: 8093

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-service
  namespace: urbanops
  labels:
    app: traffic-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-service
  template:
    metadata:
      labels:
        app: traffic-service
    spec:
      containers:
        - name: traffic-service
          image: nithingowdahm87/hackathon-traffic-service:latest
          ports:
            - containerPort: 8092
---

apiVersion: v1
kind: Service
metadata:
  name: traffic-service
  namespace: urbanops
spec:
  selector:
    app: traffic-service
  ports:
    - port: 8092
      targetPort: 8092

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service
  namespace: urbanops
  labels:
    app: python-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
        - name: python-service
          image: nithingowdahm87/hackathon-python-service:latest
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: urbanops
spec:
  selector:
    app: python-service
  ports:
    - port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: urbanops
  labels:
    app: frontend
spec:
  replicas: 1
  selector:

    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nithingowdahm87/hackathon-frontend:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: urbanops
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
