k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urbanops-ingress
  namespace: urbanops
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth-service
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8090
          - path: /alert-service
            pathType: Prefix
            backend:
              service:
                name: alert-service
                port:
                  number: 8091
          - path: /cctv-service
            pathType: Prefix
            backend:
              service:
                name: cctv-service
                port:
                  number: 8094
          - path: /gateway-service
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
          - path: /power-service
            pathType: Prefix
            backend:
              service:
                name: power-service
                port:
                  number: 8093
          - path: /traffic-service
            pathType: Prefix
            backend:
              service:
                name: traffic-service
                port:
                  number: 8092
          - path: /python-service
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
